force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/TimeTrade_SF1__Customer_Attendee__c.object-meta.xml
<CustomObject>
    <label>TimeTrade Customer Attendee</label>
    <nameField>
        <displayFormat>MIC-{0000}</displayFormat>
        <label>Meeting Invite Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeTrade Customer Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>