force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Attendee_Account__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Attendee_Account__c</fullName>
    <formula>IF( NOT( ISBLANK( TimeTrade_SF1__Contact__c )), TimeTrade_SF1__Contact__r.Account.Name, 
IF( NOT( ISBLANK( TimeTrade_SF1__Lead__c )),TimeTrade_SF1__Lead__r.Company, 
IF(NOT( ISBLANK( TimeTrade_SF1__Person_Account__c )), 
TimeTrade_SF1__Person_Account__r.Name, 
IF(NOT( ISBLANK( TimeTrade_SF1__Individual_Account__c )),TimeTrade_SF1__Individual_Account__r.Name,&#39;&#39;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Account</label>
    <type>Text</type>
</CustomField>