force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Attendee_Email_Standard__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Attendee_Email_Standard__c</fullName>
    <formula>IF( 
OR( 
NOT( ISBLANK( TimeTrade_SF1__Contact__c ) ) , 
NOT( ISBLANK( TimeTrade_SF1__Lead__c ) ) 
) 
, 
IF( 
ISBLANK( TimeTrade_SF1__Contact__c ) , 
TimeTrade_SF1__Lead__r.Email  , 
TimeTrade_SF1__Contact__r.Email ) 
, 

TimeTrade_SF1__Attendee_Email__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Attendee Email</label>
    <type>Text</type>
</CustomField>