force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Attendee_First_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Attendee_First_Name__c</fullName>
    <description>First Name of Attendee</description>
    <label>Attendee First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>