force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Attendee_First_Name_Standard__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Attendee_First_Name_Standard__c</fullName>
    <formula>IF( 
OR( 
NOT( ISBLANK( TimeTrade_SF1__Contact__c ) ) , 
NOT( ISBLANK( TimeTrade_SF1__Lead__c ) ) 
)                         
, 
IF( 
 ISBLANK( TimeTrade_SF1__Contact__c )  , 
TimeTrade_SF1__Lead__r.FirstName 
, 
 TimeTrade_SF1__Contact__r.FirstName
)
, 

 TimeTrade_SF1__Attendee_First_Name__c )</formula>
    <label>Customer Attendee First Name</label>
    <type>Text</type>
</CustomField>