force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Attendee_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Attendee_Last_Name__c</fullName>
    <description>Second Name of the Attendee</description>
    <label>Attendee Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>