force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Attendee_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+TimeTrade_SF1__Who_ID__c,  TimeTrade_SF1__Attendee_First_Name__c + &#39; &#39;+ TimeTrade_SF1__Attendee_Last_Name__c )</formula>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>