force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Attendee_Phone__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Attendee_Phone__c</fullName>
    <label>Attendee Phone</label>
    <type>Phone</type>
</CustomField>