force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Attendee_Title__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Attendee_Title__c</fullName>
    <formula>IF( 
OR( 
NOT( ISBLANK( TimeTrade_SF1__Contact__c ) ) , 
NOT( ISBLANK( TimeTrade_SF1__Lead__c ) ) 
) 
, 
IF( 
ISBLANK( TimeTrade_SF1__Contact__c ) , 
TimeTrade_SF1__Lead__r.Title 
, 
TimeTrade_SF1__Contact__r.Title 
) 
, 

TimeTrade_SF1__Customer_Attendee_Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Title</label>
    <type>Text</type>
</CustomField>