force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__ConfirmationNumber__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__ConfirmationNumber__c</fullName>
    <label>Confirmation Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>