force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Contact__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>LinkedContacts</relationshipName>
    <type>Lookup</type>
</CustomField>