force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Customer_Attendee_Company__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Customer_Attendee_Company__c</fullName>
    <formula>TimeTrade_SF1__Lead__r.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Attendee Company</label>
    <type>Text</type>
</CustomField>