force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Customer_Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Customer_Attendee_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ IF( NOT( ISBLANK( TimeTrade_SF1__Contact__c )), TimeTrade_SF1__Contact__c, 
IF( NOT( ISBLANK( TimeTrade_SF1__Lead__c )),TimeTrade_SF1__Lead__c, 
IF(NOT( ISBLANK( TimeTrade_SF1__Person_Account__c )), 
TimeTrade_SF1__Person_Account__c, 
IF(NOT( ISBLANK( TimeTrade_SF1__Individual_Account__c )),TimeTrade_SF1__Person_Account__c,Id)))) , TimeTrade_SF1__Attendee_First_Name_Standard__c + &#39; &#39;+ TimeTrade_SF1__Attendee_Last_Name_Standard__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Attendee Name</label>
    <type>Text</type>
</CustomField>