force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Customer_Attendee_Title__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Customer_Attendee_Title__c</fullName>
    <label>Customer Attendee Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>