force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Individual_Account__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Individual_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the related Individual account</description>
    <inlineHelpText>Lookup field to the related Individual account</inlineHelpText>
    <label>Individual Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TimeTrade Customer Attendees (Individual Account)</relationshipLabel>
    <relationshipName>TimeTrade_Customer_Attendees1</relationshipName>
    <type>Lookup</type>
</CustomField>