force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Invitation_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Invitation_Name__c</fullName>
    <formula>TimeTrade_SF1__Invitation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invitation Name</label>
    <type>Text</type>
</CustomField>