force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Lead__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead Related with the Meeting invitation</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Meeting_Invitation_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>