force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Meeting__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Meeting__c</fullName>
    <label>TimeTrade Meeting</label>
    <referenceTo>TimeTrade_SF1__Meeting__c</referenceTo>
    <relationshipLabel>TimeTrade Customer Attendees</relationshipLabel>
    <relationshipName>TimeTrade_Customer_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>