force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Owner_Name__c</fullName>
    <formula>TimeTrade_SF1__Invitation__r.CreatedBy.FirstName + &#39; &#39; + TimeTrade_SF1__Invitation__r.CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>