force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Person_Account__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Person_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the related person account</description>
    <label>Person Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TimeTrade Customer Attendees</relationshipLabel>
    <relationshipName>TimeTrade_Customer_Attendees</relationshipName>
    <type>Lookup</type>
</CustomField>