force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Schedule_URL__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Schedule_URL__c</fullName>
    <formula>TimeTrade_SF1__Meeting__r.TimeTrade_SF1__Schedule_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule URL</label>
    <type>Text</type>
</CustomField>