force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Type__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Type__c</fullName>
    <description>Type of the Attendee</description>
    <label>Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>