force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/fields/TimeTrade_SF1__Who_ID__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Who_ID__c</fullName>
    <description>The ID of the related Object</description>
    <label>Who ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>