force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/recordTypes/TimeTrade_SF1__Contact_Related.recordType-meta.xml
<RecordType>
    <fullName>TimeTrade_SF1__Contact_Related</fullName>
    <active>true</active>
    <label>Contact</label>
</RecordType>