force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/recordTypes/TimeTrade_SF1__External_Attendee.recordType-meta.xml
<RecordType>
    <fullName>TimeTrade_SF1__External_Attendee</fullName>
    <active>true</active>
    <description>External Attendee who are not stored as Contacts/Leads</description>
    <label>External Attendee</label>
</RecordType>