force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/recordTypes/TimeTrade_SF1__Lead_Related.recordType-meta.xml
<RecordType>
    <fullName>TimeTrade_SF1__Lead_Related</fullName>
    <active>true</active>
    <label>Lead</label>
</RecordType>