force-app/main/default/objects/TimeTrade_SF1__Customer_Attendee__c/recordTypes/TimeTrade_SF1__Person_Account_Related.recordType-meta.xml
<RecordType>
    <fullName>TimeTrade_SF1__Person_Account_Related</fullName>
    <active>true</active>
    <description>Customer attendees of type person accounts</description>
    <label>Person Account</label>
</RecordType>